--- a/packages/grafana-data/package.json
+++ b/packages/grafana-data/package.json
@@ -38,7 +38,7 @@
     "regenerator-runtime": "0.13.9",
     "rxjs": "7.5.1",
     "tslib": "2.3.1",
-    "uplot": "1.6.18",
+    "uplot": "leeoniya/uplot#3af2d519623a79321e3abf09244eca1b703ecc78",
     "xss": "1.0.10"
   },
   "devDependencies": {
