--- a/packages/grafana-ui/package.json
+++ b/packages/grafana-ui/package.json
@@ -87,7 +87,7 @@
     "slate-plain-serializer": "0.7.10",
     "tinycolor2": "1.4.2",
     "tslib": "2.3.1",
-    "uplot": "1.6.18",
+    "uplot": "leeoniya/uplot#3af2d519623a79321e3abf09244eca1b703ecc78",
     "uuid": "8.3.2"
   },
   "devDependencies": {
