Set up config for query history

--- a/conf/defaults.ini
+++ b/conf/defaults.ini
@@ -866,6 +866,14 @@ max_annotations_to_keep =
 # Enable the Explore section
 enabled = true
 
+#################################### Query history #############################
+[query_history]
+# Enable the Query history section
+enabled = true
+# Configures for how long are queries stored in query history. Default is 7d. Maximum is 2w.
+# This setting should be expressed as an duration. Ex 6h (hours), 10d (days), 2w (weeks), 1M (month).
+max_age = 7d
+
 #################################### Internal Grafana Metrics ############
 # Metrics available at HTTP API Url /metrics
 [metrics]
