--- a/conf/sample.ini
+++ b/conf/sample.ini
@@ -849,6 +849,13 @@
 # Enable the Explore section
 ;enabled = true
 
+#################################### Query History #############################
+[query_history]
+# Enable the Query history section
+;enabled = false
+# Configures for how long are queries stored in query history. Default is 7d. Maximum is 2w.
+# This setting should be expressed as an duration. Ex 6h (hours), 10d (days), 2w (weeks), 1M (month).
+;max_age = 
 #################################### Internal Grafana Metrics ##########################
 # Metrics available at HTTP API Url /metrics
 [metrics]
