Create config to enable/disable query history

--- a/conf/sample.ini
+++ b/conf/sample.ini
@@ -849,6 +849,11 @@
 # Enable the Explore section
 ;enabled = true
 
+#################################### Query History #############################
+[query_history]
+# Enable the Query history
+;enabled = true
+
 #################################### Internal Grafana Metrics ##########################
 # Metrics available at HTTP API Url /metrics
 [metrics]
