--- a/conf/defaults.ini
+++ b/conf/defaults.ini
@@ -866,6 +866,11 @@ max_annotations_to_keep =
 # Enable the Explore section
 enabled = true
 
+#################################### Query History #############################
+[query_history]
+# Enable the Query history
+enabled = true
+
 #################################### Internal Grafana Metrics ############
 # Metrics available at HTTP API Url /metrics
 [metrics]
