move logs-panel to logs-traces-squad

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -106,6 +106,7 @@ go.sum @grafana/backend-platform
 /public/app/plugins/panel/barchart @grafana/grafana-bi-squad
 /public/app/plugins/panel/heatmap @grafana/grafana-bi-squad
 /public/app/plugins/panel/histogram @grafana/grafana-bi-squad
+/public/app/plugins/panel/logs @grafana/logs-traces-squad
 /public/app/plugins/panel/nodeGraph @grafana/logs-traces-squad
 /public/app/plugins/panel/piechart @grafana/grafana-bi-squad
 /public/app/plugins/panel/state-timeline @grafana/grafana-bi-squad
