Refactor, adjust based on feedback, add new test

--- a/conf/defaults.ini
+++ b/conf/defaults.ini
@@ -869,7 +869,7 @@ enabled = true
 #################################### Query History #############################
 [query_history]
 # Enable the Query history
-enabled = true
+enabled = false
 
 #################################### Internal Grafana Metrics ############
 # Metrics available at HTTP API Url /metrics
