--- a/conf/sample.ini
+++ b/conf/sample.ini
@@ -852,7 +852,7 @@
 #################################### Query History #############################
 [query_history]
 # Enable the Query history
-;enabled = true
+;enabled = false
 
 #################################### Internal Grafana Metrics ##########################
 # Metrics available at HTTP API Url /metrics
